--- a/res/layout/main_layout.xml
+++ b/res/layout/main_layout.xml
@@ -28,7 +28,9 @@
         android:layout_height="wrap_content"
         android:text="Login" />
 
-    <ScrollView
+    
+    
+   <!--  <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="match_parent" >
 
@@ -37,6 +39,11 @@
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:text="Loading..." />
-    </ScrollView>
+    </ScrollView> -->
+
+    <WebView
+        android:id="@+id/wvTest"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
